<resources>
    <string name="app_name">CountingApp</string>
    <string name="counter">Counters</string>
    <string name="intro_description">Capture cups of lattes, frapuccinos,\n or anything else that can be counted.</string>
    <string name="add_counter">+ ADD COUNTER</string>
    <string name="no_counters_yet">No counters yet</string>
    <string name="search_counters">Search Counters</string>
    <string name="retry">RETRY</string>
    <string name="connection_error_title">Couldn’t load the counters</string>
    <string name="connection_error_subtitle">The Internet connection appears to be offline.</string>
    <string name="no_counters_title">When I started counting my blessings, \nmy whole life turned around.</string>
    <string name="counter_sample">Number of times I’ve forgotten my mother’s name because I was high on Frugelés.</string>
    <string name="sample_counter">Cups of coffe</string>
    <string name="create_counter">Create counter</string>
    <string name="create_counter_sample_message">Give it a name. Creative block? See <u>examples.</u></string>
    <string name="decrease_icon">decrease icon</string>
    <string name="increase_icon">increase icon</string>
    <string name="delete_counter_title">Delete selected counters"?</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="share">Share</string>
    <string name="items">%1$d items</string>
    <string name="times">%1$d times</string>
    <string name="dialog_delete_counter_error_title">Couldn\'t delete the counter</string>
    <string name="dialog_delete_counter_error_message">The internet connection appears to \n be offline.</string>
    <string name="ok">OK</string>
    <string name="dialog_modify_counter_error">Couldn\'t update %1$s counter to %2$d</string>
    <string name="dismiss">DISMISS</string>
    <string name="no_results">No results</string>
    <string name="dialog_create_counter_error_title">Couldn\'t create the counter</string>
    <string name="examples">Examples</string>
    <string name="samples_subtitle">Select an example to add it to your counters.</string>
    <string name="title_drinks">Drinks</string>
    <string name="food_title">food</string>
    <string name="misc_title">Misc</string>
    <string name="empty_counter">You cant create a empty counter</string>
    <string name="get_started">GET STARTED</string>

    <string-array name="drinks">
        <item>Cup of coffee</item>
        <item>Glasses of water</item>
        <item>Some More</item>
    </string-array>

    <string-array name="food">
        <item>Hot-dogs</item>
        <item>Cupcakes eaten</item>
        <item>Chicken sandwich</item>
    </string-array>

    <string-array name="misc">
        <item>Times sneezed</item>
        <item>Nap</item>
        <item>Day Dreaming</item>
    </string-array>
</resources>