<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.aliceresponde.countingapp.presentation.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        tools:context=".presentation.main.MainFragment">

        <SearchView
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="29dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/ic_search_background"
            android:paddingLeft="16dp"
            android:queryHint="@string/search_counters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/loadingSwipeToRefresh"
            android:visibility="@{viewModel.swipeToRefreshVisibility}"
            android:elevation="5dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/ic_swipe_to_refresh"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar" />

        <TextView
            android:id="@+id/countersLabel"
            android:visibility="@{viewModel.counterListVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            tools:text="4 Items" />

        <TextView
            android:id="@+id/totalCounters"
            android:visibility="@{viewModel.counterListVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:textColor="@color/grayColor"
            android:textSize="17sp"
            app:layout_constraintStart_toEndOf="@+id/countersLabel"
            app:layout_constraintTop_toTopOf="@+id/countersLabel"
            tools:text="17 items" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/countersList"
            android:visibility="@{viewModel.counterListVisibility}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="23dp"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/countersLabel" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noDataContainer"
            android:visibility="@{viewModel.noDataVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_counters_yet"
                android:textColor="@color/blackColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="When I started counting my blessings, \nmy whole life turned around."
                android:textColor="@color/grayColor"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/connectionErrorContainer"
            android:visibility="@{viewModel.internetErrorVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/connectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_error_title"
                android:textColor="@color/blackColor"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/connectionSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/connection_error_subtitle"
                android:textColor="@color/grayColor"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connectionTitle" />

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/connectionSubtitle"
                android:text="@string/retry"
                android:textColor="@color/orangeColor"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <ProgressBar
            android:id="@+id/loading"
            android:visibility="@{viewModel.loadingVisibility}"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:visibility="@{viewModel.addCounterVisibility}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/ic_orange_button"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/add_counter"
            android:textColor="@color/whiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>